--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-html": "^6.1.1",
     "prettier": "^1.19.1"
+  },
+  "dependencies": {
+    "chart.js": "^2.9.4"
   }
 }
